{
  "settings": "Settings",
  "fullLanguage": "English",
  "en": "English",
  "lt": "Lithuanian",
  "darkMode": "Dark mode",
  "lightMode": "Light mode",

  "assistant": "Assistant",

  "yourAssistant": "Your assistant",

  "new": "New",

  "back": "Back",
  "next": "Next",
  "complete": "Complete",

  "searchByCategory": "Search by category",
  "reset": "Reset",
  "close": "Close",

  "home": "Home",
  "scanner": "Scanner",
  "history": "History",
  "Settings": "Settings",

  "insects": "Insects",
  "search": "Search insects",
  "isBiting": "Biting",
  "isDanger": "Dangerous",
  "isEndangered": "Endangered",
  "isFlying": "Flying",
  "isParasite": "Parasite",
  "isPoisonous": "Poisonous",

  "scanHistory": "Scan history",
  "noDataFound": "No data found",
  "noDataFoundDescription": "You haven't completed any scan yet. Complete a scan to see it in history.",

  "description": "Description",
  "dangerDescription": "Danger description",
  "location": "Location",
  "habitat": "Habitat",
  "findControl": "Find insect control",
  "locationPermissionTitle": "Location permission",
  "locationPermissionDescription": "We need your location to find the nearest insect control.",
  "locationPermissionError": "We need your location to find the nearest insect control, please enable location permissions in the settings.",
  "initialChatMessage": "Hello! How can I help you?",
  "chatPlaceholder": "Type a message...",

  "appData": "App data",
  "clearCache": "Clear cache",
  "clearCacheConfirmation": "Are you sure you want to clear the cache? This will remove all data and reset the app to its initial state.",
  "clear": "Clear",
  "selectLanguage": "Select language",

  "allowPermission": "Allow permissions"
}
