...
        style={{flex: 1}}
        contentContainerStyle={{
          gap: 12,
          paddingBottom: bottom + 16 + 48, // To prevent the FAB from overlapping the content
        }}>
        <Animated.View
          testID="insect-image"
          style={[
            animatedImageContainerStyle,
            {
              overflow: 'hidden',
              borderBottomLeftRadius: 16,
              borderBottomRightRadius: 16,
...
