...
      transform: [{scale: withTiming(pressed ? 0.9 : 1, {duration: 100})}],
    };
  });

  return (
    <AnimatedPressable
      testID={'make-photo-button'}
      disabled={disabled}
      style={[animatedContainerStyle, style]}
      onPressIn={e => {
        setPressed(true);
        onPressIn?.(e);
      }}
...
