{
  "settings": "Nustatymai",
  "fullLanguage": "Lietuvių",
  "en": "Anglų",
  "lt": "Lietuvių",
  "darkMode": "Tamsus režimas",
  "lightMode": "Šviesus režimas",
  "logout": "Atsijungti",
  "logoutConfirmation": "Ar tikrai norite atsijungti?",

  "yourAssistant": "Tavo asistentas",

  "back": "Atgal",
  "next": "Kitas",
  "complete": "Baigti",

  "searchByCategory": "Ieškoti pagal kategoriją",
  "reset": "Atstatyti",
  "close": "Uždaryti",

  "home": "Pagrindinis",
  "scanner": "Skenavimas",
  "history": "Istorija",
  "Settings": "Nustatymai",

  "insects": "Vabzdžiai",
  "search": "Ieškoti vabzdžių",
  "isBiting": "Kandantys",
  "isDanger": "Pavojingi",
  "isEndangered": "Gresiantys",
  "isFlying": "Skraidantys",
  "isParasite": "Parazitiniai",
  "isPoisonous": "Nuodingi",

  "scanHistory": "Skenavimų istorija",
  "noDataFound": "Duomenų nerasta",
  "noDataFoundDescription": "Jūs dar nepabaigėte jokio skenavimo. Atlikite skenavimą, kad jį pamatytumėte istorijoje.",

  "description": "Aprašymas",
  "dangerDescription": "Pavojingumo aprašymas",
  "location": "Lokacija",
  "habitat": "Gyvenvietė",
  "findControl": "Rasti vabzdžių kontrolę",
  "locationPermissionTitle": "Lokacijos leidimas",
  "locationPermissionDescription": "Mums reikia jūsų lokacijos, kad rastume artimiausią vabzdžių kontrolę.",
  "locationPermissionError": "Mums reikia jūsų lokacijos, kad rastume artimiausią vabzdžių kontrolę, prašome įjungti lokacijos leidimus nustatymuose.",

  "initialChatMessage": "Sveiki! Kaip galiu jums padėti?",
  "chatPlaceholder": "Parašykite žinutę...",

  "appData": "Programos duomenys",
  "clearCache": "Atlaisvinti atmintį",
  "clearCacheConfirmation": "Ar tikrai norite išvalyti atmintį? Tai pašalins visus duomenis ir atstatys programą į pradinę būseną.",
  "clear": "Išvalyti",
  "selectLanguage": "Pasirinkite kalbą",

  "allowPermission": "Leisti leidimus"
}
